[package]
authors     = ["Kira Tully <kira-crates@kiratully.com>"]
categories  = ["command-line-utilities"]
description = "An Arduino-based relay control server and Android/desktop client"
edition     = "2021"
homepage    = "https://github.com/shanet/RelayRemote"
keywords    = ["cli", "arduino"]
license     = "GPL-3.0-only"
name        = "relay-remote"
readme      = "README.md"
repository  = "https://github.com/shanet/RelayRemote"
version     = "0.1.0"

[dependencies]
clap       = "4.5.31"
reqwest    = {version="0.12.12", features=["blocking", "json"]}
serde      = {version="1.0", features=["derive"]}
serde_json = "1.0"
